# SIGESI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  PLANO_TESTES_CEMITERIO.md  README.md  aplication-prod.yaml  checkstyle.xml  compose-prod.yaml  compose-test.yaml  compose.yaml  nginx.conf  pom.xml  set-env-example.fish  set-env-example.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  gunicorn.conf.py  pyproject.toml
backend/apps/arquivos/: apps.py  models.py  schema.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/cemiterios/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/comentarios/: apps.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/core/: apps.py  exceptions.py  permissions.py
backend/apps/demandas/: apps.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/documentos/: apps.py  models.py  schema.py  serializers.py  services.py  urls.py  views.py
backend/apps/enderecos/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/gavetas/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/jazigos/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/materiais/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/pessoas/: apps.py  filters.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/solicitacoes/: apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
deploy/: nginx.conf
notification-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
notification-service/alembic/: env.py
notification-service/app/: config.py  database.py  dependencies.py  main.py
notification-service/tests/: conftest.py  test_email_service.py  test_notifications.py  test_preferences.py
(+264 files in other folders)
