[project]
name = "sigesi"
version = "0.1.0"
description = "SIGESI - Sistema de Gerenciamento da Secretaria de Infraestrutura"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.15,<4.0",
    "django-environ>=0.12.0",
    "django-cors-headers>=4.6.0",
    "django-filter>=24.3",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
    "minio>=7.2.15",
    "weasyprint>=63.1",
    "django-allauth[headless,socialaccount]>=65.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*/migrations/*",
    "manage.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line too long (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["S101", "S106"]
"**/migrations/**" = ["E501", "N"]
"config/settings/**" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
